# bughouse-chess

./: Cargo.toml  README.md
src/: bitboard.rs  board.rs  board_builder.rs  bughouse_move.rs  cache_table.rs  castle_rights.rs  chess_move.rs  error.rs  game.rs  lib.rs  magic.rs  piece.rs  reserve.rs  square.rs
src/gen_tables/: generate_all_tables.rs  king.rs  ranks_files.rs
src/movegen/: movegen.rs  piece_type.rs
