[package]
name = "bughouse-chess"
version = "0.1.0"
edition = "2021"
authors = ["Jordan Bray <jordanbray@gmail.com>", "Viren Sawant <viren.c.sawant@gmail.com"]
description = "A fast move generator for bughouse chess (2v2 variant with piece drops). Forked from jordanbray/chess with bughouse-specific rules: king can move into check, king capture ends game, piece drops from reserves, promoted piece demotion."
build = "src/build.rs"

readme = "README.md"
keywords = ["chess", "bughouse", "move", "generator"]
license = "MIT"

[dependencies]
arrayvec = "0.7.2"
nodrop = "0.1.14"
failure = "0.1.6"

[profile.release]
opt-level = 3
debug = false

[profile.dev]
opt-level = 3
debug = true

[profile.test]
opt-level = 3

# always optimize build script, because it takes a long time to run unoptimized
[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3
[profile.test.build-override]
opt-level = 3

[build-dependencies]
rand = { version = "0.7.2", default_features = false, features = ["small_rng"] }
failure = "0.1.6"
