[package]
name = "bughouse-chess"
version = "0.1.0"
edition = "2021"
authors = ["Viren"]
description = "A bughouse chess move generation library based on the chess crate. Supports reserves, piece drops, BFEN notation, promoted piece tracking, and drop-aware checkmate detection."
build = "src/build.rs"

readme = "README.md"
keywords = ["chess", "bughouse", "move", "generator"]
license = "MIT"

[dependencies]
arrayvec = "0.7.2"
nodrop = "0.1.14"
thiserror = "2"

[profile.release]
opt-level = 3
debug = false

[profile.dev]
opt-level = 3
debug = true

[profile.test]
opt-level = 3

# always optimize build script, because it takes a long time to run unoptimized
[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3
[profile.test.build-override]
opt-level = 3

[build-dependencies]
rand = { version = "0.7.2", default_features = false, features = ["small_rng"] }
thiserror = "2"
